--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -8,11 +8,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10. 3.11]
+        python-version: [3.8, 3.9, 3.10.11, 3.11.2]
 
     steps:
     - uses: actions/checkout@master
@@ -20,16 +19,20 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt;
+
     - name: Lint with flake8
       run: |
         make lint-flake8
+
     - name: Check isort
       run: |
         make lint-isort
+
     - name: Test with mypy
       run: |
         make lint-mypy
