--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,13 @@ adaptix = ['py.typed']
 [[project.authors]]
 name = 'Pavel'
 
+
 [tool.pytest.ini_options]
 asyncio_mode = 'auto'
+
+[tool.isort]
+multi_line_output = 3
+line_length = 120
+include_trailing_comma = true
+combine_as_imports = true
+remove_redundant_aliases = true
